objects/DMAPP__DM_DVLS_Curriculum__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the eLearning Curricula. These can be edited through the eLearning Admin App.</description>
    <fields>
        <fullName>DMAPP__App__c</fullName>
        <label>App</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <description>Short paragraph describing the curriculum</description>
        <inlineHelpText>Overview of the curriculum.

This is displayed to the user on click of the &apos;i&apos; icon to the right of the curriculum name in the eLearning player.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <inlineHelpText>Position in which the curriculum is displayed in eLearning.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Rollup__c</fullName>
        <inlineHelpText>Automatically calculated field identifying the number of modules with tests under this curriculum. This is used for displaying the user&apos;s scores, e.g., passed 4 of 8 modules.</inlineHelpText>
        <label>Question Rollup</label>
        <summaryFilterItems>
            <field>DMAPP__DM_DVLS_Module__c.DMAPP__Question_Rollup__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__DM_DVLS_Module__c.DMAPP__DM_DVLS_Curriculum__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Rollup__c</fullName>
        <inlineHelpText>Automatically calculated field identifying the number of content items under this curriculum. This is used for displaying the user&apos;s completion levels, e.g., viewed 49 of 62 items.</inlineHelpText>
        <label>Content Item Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Module__c.DMAPP__Quicklink_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Module__c.DMAPP__DM_DVLS_Curriculum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique reference for the curriculum. This value is used when associating modules with a curriculum.</inlineHelpText>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Curriculum</label>
    <nameField>
        <label>eLearning Curriculum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curricula</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>